deploy/modelrelay-io/cloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud
  namespace: modelrelay
spec:
  selector:
    app: cloud
  ports:
    - port: 8000
      targetPort: 8000
