deploy/modelrelay-io/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: modelrelay
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
